feature/mobile_layout : mobile nav add icon and adjust indentation

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -112,34 +112,48 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page xlarge">Project</li>
-          <ul class="mobile-nav__page--projects large">
+          <li class="mobile-nav__page large">Project</li>
+          <ul class="mobile-nav__page--projects">
             <li class="page--projects">
-              <a href="day00.html">DAY00</a>
+              <a href="day00.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day01.html">DAY01</a>
+              <a href="day01.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day02.html">DAY02</a>
+              <a href="day02.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day03.html">DAY03</a>
+              <a href="day03.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day04.html">DAY04</a>
+              <a href="day04.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day05.html">DAY05</a>
+              <a href="day05.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
+              >
             </li>
             <li class="page--projects">
-              <a href="rush.html">RUSH</a>
+              <a href="rush.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
+              >
             </li>
           </ul>
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
@@ -239,19 +253,19 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex00/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex00/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspNONE
+                    :&nbsp;&nbsp;&nbsp;&nbsp;NONE
                   </td>
                 </tr>
               </tbody>
@@ -282,19 +296,19 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex01/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex01/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspspan, h1, h2, h3, h4, h5, h6
+                    :&nbsp;&nbsp;&nbsp;&nbsp;span, h1, h2, h3, h4, h5, h6
                   </td>
                 </tr>
               </tbody>
@@ -326,19 +340,19 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex02/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex02/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspspan, p, img
+                    :&nbsp;&nbsp;&nbsp;&nbsp;span, p, img
                   </td>
                 </tr>
               </tbody>
@@ -370,19 +384,19 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex03/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex03/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspa, form, div, label, span, input,
+                    :&nbsp;&nbsp;&nbsp;&nbsp;a, form, div, label, span, input,
                     textarea
                   </td>
                 </tr>
@@ -424,20 +438,20 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex04/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex04/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbsph2, table, thead, th, tbody, td, tfoot,
-                    ol, li, ul
+                    :&nbsp;&nbsp;&nbsp;&nbsp;h2, table, thead, th, tbody, td,
+                    tfoot, ol, li, ul
                   </td>
                 </tr>
               </tbody>
@@ -468,19 +482,19 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspex05/
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex05/
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspindex.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-data">
-                    :&nbsp&nbsp&nbsp&nbspimg, map, area
+                    :&nbsp;&nbsp;&nbsp;&nbsp;img, map, area
                   </td>
                 </tr>
               </tbody>
