--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -111,34 +111,48 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page xlarge">Project</li>
-          <ul class="mobile-nav__page--projects large">
+          <li class="mobile-nav__page large">Project</li>
+          <ul class="mobile-nav__page--projects">
             <li class="page--projects">
-              <a href="day00.html">DAY00</a>
+              <a href="day00.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day01.html">DAY01</a>
+              <a href="day01.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day02.html">DAY02</a>
+              <a href="day02.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day03.html">DAY03</a>
+              <a href="day03.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day04.html">DAY04</a>
+              <a href="day04.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day05.html">DAY05</a>
+              <a href="day05.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
+              >
             </li>
             <li class="page--projects">
-              <a href="rush.html">RUSH</a>
+              <a href="rush.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
+              >
             </li>
           </ul>
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
@@ -256,8 +270,8 @@
             </ul>
             <pre><code class="content__code"
             ><p class="code__line text-bold">&lt;div class="header"&gt;</p>
-            <p class="code__line text-bold">&nbsp&nbsp&lt;div class="menu"&gt;....&lt;/div&gt;</p>
-            <p class="code__line text-bold">&nbsp&nbsp&lt;div class="search"&gt;....&lt;/div&gt;</p>
+            <p class="code__line text-bold">&nbsp;&nbsp;&lt;div class="menu"&gt;....&lt;/div&gt;</p>
+            <p class="code__line text-bold">&nbsp;&nbsp;&lt;div class="search"&gt;....&lt;/div&gt;</p>
             <p class="code__line text-bold">&lt;div&gt;</p>
           </code></pre>
             <h5 class="content__subhead-three text-bold">Element</h5>
@@ -304,9 +318,9 @@
             </ul>
             <pre><code class="content__code"
             ><p class="code__line text-bold">.header__navigation {</p>
-            <p class="code__line text-bold">&nbsp&nbspbackground: #008cba;</p>
-            <p class="code__line text-bold">&nbsp&nbsppadding: 1px 0;</p>
-            <p class="code__line text-bold">&nbsp&nbspmargin: 2px 0;</p>
+            <p class="code__line text-bold">&nbsp;&nbsp;background: #008cba;</p>
+            <p class="code__line text-bold">&nbsp;&nbsp;padding: 1px 0;</p>
+            <p class="code__line text-bold">&nbsp;&nbsp;margin: 2px 0;</p>
             <p class="code__line text-bold">}</p>
           </code></pre>
             <ul class="content__list">
