--- a/index.html
+++ b/index.html
@@ -124,24 +124,40 @@
           <li class="mobile-nav__page large text-bold">Project</li>
           <ul class="mobile-nav__page--projects">
             <li class="page--projects">
-              <a href="pages/day00.html">DAY00</a>
+              <a href="pages/day00.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
+              >
             </li>
             <li class="page--projects">
-              <a href="pages/day01.html">DAY01</a>
+              <a href="pages/day01.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
+              >
             </li>
             <li class="page--projects">
-              <a href="pages/day02.html">DAY02</a>
+              <a href="pages/day02.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
+              >
             </li>
             <li class="page--projects">
-              <a href="pages/day03.html">DAY03</a>
+              <a href="pages/day03.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
+              >
             </li>
             <li class="page--projects">
-              <a href="pages/day04.html">DAY04</a>
+              <a href="pages/day04.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
+              >
             </li>
             <li class="page--projects">
-              <a href="pages/day05.html">DAY05</a>
+              <a href="pages/day05.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
+              >
             </li>
-            <li class="page--projects"><a href="pages/rush.html">RUSH</a></li>
+            <li class="page--projects">
+              <a href="pages/rush.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
+              >
+            </li>
           </ul>
           <li class="mobile-nav__page large text-bold">
             <a href="pages/guideline.html">Guideline</a>
