--- a/pages/day04.html
+++ b/pages/day04.html
@@ -112,34 +112,48 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page xlarge">Project</li>
-          <ul class="mobile-nav__page--projects large">
+          <li class="mobile-nav__page large">Project</li>
+          <ul class="mobile-nav__page--projects">
             <li class="page--projects">
-              <a href="day00.html">DAY00</a>
+              <a href="day00.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day01.html">DAY01</a>
+              <a href="day01.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day02.html">DAY02</a>
+              <a href="day02.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day03.html">DAY03</a>
+              <a href="day03.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day04.html">DAY04</a>
+              <a href="day04.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
+              >
             </li>
             <li class="page--projects">
-              <a href="day05.html">DAY05</a>
+              <a href="day05.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
+              >
             </li>
             <li class="page--projects">
-              <a href="rush.html">RUSH</a>
+              <a href="rush.html"
+                ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
+              >
             </li>
           </ul>
-          <li class="mobile-nav__page xlarge">
+          <li class="mobile-nav__page large">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
