feature/subject : added DAY00 Today's Rule

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -174,7 +174,7 @@
           <h2 class="content__head xxxlarge text-bold">DAY00</h2>
 
           <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
+            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
             <ul class="content__list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
@@ -237,6 +237,15 @@
               >에서 찾곤 합니다.
             </p>
             <hr class="horiz-divider" />
+            <h3 class="content__subhead xlarge text-bold">Today's Rule</h3>
+            <ul class="content__list">
+              <li>
+                Exercise에 명시되어 있지 않다면 모든 style 사용을 금지합니다.
+              </li>
+            </ul>
+
+            <hr class="horiz-divider" />
+
             <h3 class="content__subhead xlarge text-bold">
               Exercise 00 : Hello World!
             </h3>
