feature/subject : added content__img's margin, edited DAY01

--- a/pages/day01.html
+++ b/pages/day01.html
@@ -170,7 +170,124 @@
       </header>
 
       <main class="layout__content">
-        <div class="content__frame"></div>
+        <div class="content__frame">
+          <h2 class="content__head xxxlarge text-bold">DAY01</h2>
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
+            <ul class="content__list">
+              <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
+              <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
+              <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
+              <li>
+                제출하신 과제물은 동료들끼리 서로 확인하고 평가하게 됩니다.
+              </li>
+              <li>
+                Exercise는 난이도에 따라 쉬운 문제에서 어려운 문제 순으로 짜여
+                있습니다. 앞 단 계 문제의 과제물이 완벽하게 작동하지 않으면
+                난이도가 더 높은 문제는 아무리 잘 완료했다 하더라도 평가에
+                반영되지 않습니다.
+              </li>
+              <li>
+                모든 HTML 파일은
+                <a
+                  class="text-underline text-bold"
+                  href="https://validator.w3.org/"
+                  >W3 Validator</a
+                >
+                을 통과해야 합니다.
+              </li>
+              <li>
+                meta 태그의 author에는 본인의 intra ID를 기입해야만 합니다.
+              </li>
+              <li>
+                사용이 금지된 HTML 태그를 사용하는 것은 부정 행위로 간주됩니다.
+                부정 행위는 -42점을 받게 되며, 받은 점수는 절대 조정이
+                불가능합니다.
+              </li>
+              <li>어떠한 형태로든 JavaScript의 사용을 금지합니다.</li>
+              <li>페이지가 열리지 않으면 0점을 받게 됩니다.</li>
+              <li>
+                각 Exercise에서 정한 파일 이외의 어떠한 파일도 디렉토리에 남겨
+                두어서는 안 됩니다.
+              </li>
+              <li>
+                질문이 있으신가요? 오른쪽 동료에게 물어보세요. 아니면 왼쪽
+                동료에게 물어보세요.
+              </li>
+              <li>참고 가이드는 Google...그리고 Google 입니다.</li>
+              <li>
+                예시를 꼼꼼히 살펴보세요. Exercise에서 명시적으로 언급되지 않은
+                세부적인 사항에 대한 힌트를 얻을 수도 있습니다.
+              </li>
+              <li>다같이 한번 외쳐볼까요? "Chick to Chicken~"</li>
+            </ul>
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
+            <p class="content__para">
+              파주의 마장호수는 친환경 공원으로 주말가족, 연인들의 나들이 장소로
+              제격입니다. 특히 출렁다리는 남녀노소 모든 관광객들이 즐길 수 있죠.
+              저희는 지금 마장호수를 배경으로 둔 카페에서 서브젝트를 작성하고
+              있습니다. 좋은 환경에서 좋은 코드가 나오는 법!
+            </p>
+            <img
+              class="content__img img-margin"
+              src="../assets/day01/majang.jpeg"
+            />
+            <hr class="horiz-divider" />
+            <h3 class="content__subhead xlarge text-bold">Today's Rule</h3>
+            <ul class="content__list">
+              <li>
+                Exercise에 명시되어 있지 않다면 모든 style 사용을 금지합니다.
+              </li>
+            </ul>
+
+            <hr class="horiz-divider" />
+
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 00 : Hello World!
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th colspan="2">Exercise 00</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td colspan="2" class="content__table--td">Hello World!</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-data">
+                    :&nbsp;&nbsp;&nbsp;&nbsp;ex00/
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-data">
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-data">
+                    :&nbsp;&nbsp;&nbsp;&nbsp;NONE
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>"Hello World!"를 페이지에 출력하세요.</li>
+            </ul>
+          </section>
+
+          <hr class="horiz-divider" />
+        </div>
       </main>
 
       <footer class="layout__footer">
