feature/day00 : img files if necessary

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -346,7 +346,8 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html, image files if
+                    necessary
                   </td>
                 </tr>
                 <tr class="content__table--tr">
@@ -488,7 +489,8 @@
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
+                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html, image files if
+                    necessary
                   </td>
                 </tr>
                 <tr class="content__table--tr">
