feature/day01 : ex01 images & align colon

--- a/pages/day01.html
+++ b/pages/day01.html
@@ -242,7 +242,12 @@
             <h3 class="content__subhead xlarge text-bold">Today's Rule</h3>
             <ul class="content__list">
               <li>
-                Exercise에 명시되어 있지 않다면 모든 style 사용을 금지합니다.
+                아이콘을 찾으시나요?
+                <a
+                  class="text-underline text-bold"
+                  href="https://fontawesome.com/"
+                  >엄청난 폰트</a
+                >를 사용해보세요.
               </li>
             </ul>
 
@@ -254,35 +259,39 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 00</th>
+                  <th colspan="3">Exercise 00</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">Hello World!</td>
+                  <td colspan="3" class="content__table--td">HTML is ugly!</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex00/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex00/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
+                    index.html, image files if necessary
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;NONE
+                    header, main, footer, h1, div, form, input, button, hr, p,
+                    img, a, select, optgroup, option
                   </td>
                 </tr>
               </tbody>
             </table>
             <ul class="content__list">
-              <li>"Hello World!"를 페이지에 출력하세요.</li>
+              <li>아래와 같이 페이지에 출력하세요.</li>
+              <li>Log in을 클릭하면 입력한 내용들이 서버로 전송됩니다.</li>
+              <li></li>
             </ul>
           </section>
 
