--- a/pages/day00.html
+++ b/pages/day00.html
@@ -243,39 +243,38 @@
                 Exercise에 명시되어 있지 않다면 모든 style 사용을 금지합니다.
               </li>
             </ul>
+          </section>
 
-            <hr class="horiz-divider" />
+          <hr class="horiz-divider" />
 
+          <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">
               Exercise 00 : Hello World!
             </h3>
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 00</th>
+                  <th colspan="3">Exercise 00</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">Hello World!</td>
+                  <td colspan="3" class="content__table--td">Hello World!</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex00/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex00/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;NONE
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">NONE</td>
                 </tr>
               </tbody>
             </table>
@@ -293,31 +292,30 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 01</th>
+                  <th colspan="3">Exercise 01</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">
+                  <td colspan="3" class="content__table--td">
                     Hellooooooo Worldddddddd!!!
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex01/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex01/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;span, h1, h2, h3, h4, h5, h6
+                    span, h1, h2, h3, h4, h5, h6
                   </td>
                 </tr>
               </tbody>
@@ -337,33 +335,31 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 02</th>
+                  <th colspan="3">Exercise 02</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">
+                  <td colspan="3" class="content__table--td">
                     Chick-to-Chicken
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex02/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex02/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html, image files if
-                    necessary
+                    index.html, image files if necessary
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;span, p, img
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">span, p, img</td>
                 </tr>
               </tbody>
             </table>
@@ -382,32 +378,30 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 03</th>
+                  <th colspan="3">Exercise 03</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">
+                  <td colspan="3" class="content__table--td">
                     Let me introduce myself...
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex03/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex03/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;a, form, div, label, span, input,
-                    textarea
+                    a, form, div, label, span, input, textarea
                   </td>
                 </tr>
               </tbody>
@@ -438,30 +432,28 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 04</th>
+                  <th colspan="3">Exercise 04</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">Welcome to 42</td>
+                  <td colspan="3" class="content__table--td">Welcome to 42</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex04/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex04/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">index.html</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;h2, table, thead, th, tbody, td,
-                    tfoot, ol, li, ul
+                    h2, table, thead, th, tbody, td, tfoot, ol, li, ul
                   </td>
                 </tr>
               </tbody>
@@ -482,31 +474,29 @@
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
-                  <th colspan="2">Exercise 05</th>
+                  <th colspan="3">Exercise 05</th>
                 </tr>
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="2" class="content__table--td">Beautiful Star</td>
+                  <td colspan="3" class="content__table--td">Beautiful Star</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;ex05/
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex05/</td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;index.html, image files if
-                    necessary
+                    index.html, image files if necessary
                   </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-data">
-                    :&nbsp;&nbsp;&nbsp;&nbsp;img, map, area
-                  </td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">img, map, area</td>
                 </tr>
               </tbody>
             </table>
