feature/day01 : ex01 filled

--- a/pages/day00.html
+++ b/pages/day00.html
@@ -112,10 +112,10 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large">
+          <li class="mobile-nav__page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large">Project</li>
+          <li class="mobile-nav__page large text-bold">Project</li>
           <ul class="mobile-nav__page--projects">
             <li class="page--projects">
               <a href="day00.html"
@@ -153,7 +153,7 @@
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large">
+          <li class="mobile-nav__page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
@@ -259,7 +259,9 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">Hello World!</td>
+                  <td colspan="3" class="content__table--td-name">
+                    Hello World!
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
@@ -297,7 +299,7 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">
+                  <td colspan="3" class="content__table--td-name">
                     Hellooooooo Worldddddddd!!!
                   </td>
                 </tr>
@@ -340,7 +342,7 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">
+                  <td colspan="3" class="content__table--td-name">
                     Chick-to-Chicken
                   </td>
                 </tr>
@@ -383,7 +385,7 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">
+                  <td colspan="3" class="content__table--td-name">
                     Let me introduce myself...
                   </td>
                 </tr>
@@ -417,7 +419,7 @@
                 Write your MBTI에는 원래 텍스트를 입력할 수 있지만 막아둡시다.
               </li>
               <li>Reset 클릭 시 입력한 정보가 초기화 됩니다.</li>
-              <li>Send 클릭 시 입력한 정보가 서버로 전송됩니다.</li>
+              <li>Send 클릭 시 입력한 정보가 제출됩니다.</li>
               <li>아래와 같이 페이지에 출력하세요.</li>
             </ul>
             <img class="content__img" src="../assets/day00/ex03.png" />
@@ -437,7 +439,9 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">Welcome to 42</td>
+                  <td colspan="3" class="content__table--td-name">
+                    Welcome to 42
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
@@ -479,7 +483,9 @@
               </thead>
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td">Beautiful Star</td>
+                  <td colspan="3" class="content__table--td-name">
+                    Beautiful Star
+                  </td>
                 </tr>
                 <tr class="content__table--tr">
                   <td class="content__table--td">제출 디렉토리</td>
