--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -111,10 +111,10 @@
           class="hidden-desktop hidden-mobile"
         />
         <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large">
+          <li class="mobile-nav__page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large">Project</li>
+          <li class="mobile-nav__page large text-bold">Project</li>
           <ul class="mobile-nav__page--projects">
             <li class="page--projects">
               <a href="day00.html"
@@ -152,7 +152,7 @@
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large">
+          <li class="mobile-nav__page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
