feature/day01 : day01 draft

--- a/pages/day01.html
+++ b/pages/day01.html
@@ -251,6 +251,7 @@
               </li>
               <li>이번 과제에서는 특별히 id 사용을 허용합니다.</li>
               <li>폰트, 색상은 예시 이미지와 조금 달라도 괜찮습니다.</li>
+              <li>position CSS 속성을 사용하지 마세요.</li>
             </ul>
           </section>
 
@@ -364,6 +365,7 @@
               </li>
               <li>External style sheet를 사용하세요.</li>
               <li>다양한 style 속성을 사용해보세요.</li>
+              <li>block들의 width는 320px입니다.</li>
             </ul>
             <p class="content__tip">
               <i class="material-icons-outlined">lightbulb</i>다양한 style
@@ -375,7 +377,9 @@
           <hr class="horiz-divider" />
 
           <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Exercise 02 :</h3>
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 02 : Combination pizza is delicious!
+            </h3>
             <table class="content__table">
               <thead class="content__table--thead text-bold">
                 <tr class="content__table--tr">
@@ -385,7 +389,7 @@
               <tbody class="content__table--tbody">
                 <tr class="content__table--tr content__table--ex-name">
                   <td colspan="3" class="content__table--td-name">
-                    Colorful is Wonderful!
+                    Combination pizza is delicious!
                   </td>
                 </tr>
                 <tr class="content__table--tr">
@@ -404,19 +408,74 @@
                   <td class="content__table--td">허용 태그</td>
                   <td class="content__table--td-colon">:</td>
                   <td class="content__table--td-data">
-                    header, main, footer, h1, div, form, input, button, hr, p,
-                    img, a, select, optgroup, option
+                    span, header, main, footer, h1, div, form, input, button,
+                    hr, p, img, a, select, optgroup, option
                   </td>
                 </tr>
               </tbody>
             </table>
             <ul class="content__list">
               <li>
-                id와 class를 사용해서 아래와 같이 페이지를 더 예쁘게
+                combinator selector를 사용해서 아래와 같이 페이지를 더 예쁘게
                 만들어보세요.
               </li>
             </ul>
             <img class="content__img" src="../assets/day01/ex02.png" />
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
+            <h3 class="content__subhead xlarge text-bold">
+              Exercise 03 : FLEX! Design smarter!
+            </h3>
+            <table class="content__table">
+              <thead class="content__table--thead text-bold">
+                <tr class="content__table--tr">
+                  <th colspan="3">Exercise 03</th>
+                </tr>
+              </thead>
+              <tbody class="content__table--tbody">
+                <tr class="content__table--tr content__table--ex-name">
+                  <td colspan="3" class="content__table--td-name">
+                    FLEX! Design smarter!
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 디렉토리</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">ex03/</td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">제출 파일</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">
+                    index.html, style.css, image files if necessary
+                  </td>
+                </tr>
+                <tr class="content__table--tr">
+                  <td class="content__table--td">허용 태그</td>
+                  <td class="content__table--td-colon">:</td>
+                  <td class="content__table--td-data">
+                    span, header, main, footer, h1, div, form, input, button,
+                    hr, p, img, a, select, optgroup, option
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <ul class="content__list">
+              <li>ex02의 코드를 id, class, flexbox를 사용해 바꿔보세요.</li>
+              <li>이미 이전에 사용하셨다면 잘하셨습니다.</li>
+            </ul>
+            <p class="content__tip">
+              <i class="material-icons-outlined">lightbulb</i>"Form is
+              temporary, but class is permanent" - Bill Shankly
+            </p>
+            <p class="content__tip">
+              <i class="material-icons-outlined">lightbulb</i>Flexbox를
+              사용한다면 창 크기를 줄였을 때 아래와 같이 되겠죠?
+            </p>
+            <img class="content__img" src="../assets/day01/ex03.png" />
           </section>
         </div>
       </main>
