--- a/pages/day01.html
+++ b/pages/day01.html
@@ -368,8 +368,8 @@
               <li>block들의 width는 320px입니다.</li>
             </ul>
             <p class="content__tip">
-              <i class="material-icons-outlined">lightbulb</i>다양한 style
-              속성을 사용해보세요.
+              <i class="material-icons-outlined">lightbulb</i>Margin, border,
+              padding의 차이는 뭘까요?
             </p>
             <img class="content__img" src="../assets/day01/ex01.png" />
           </section>
@@ -419,6 +419,7 @@
                 combinator selector를 사용해서 아래와 같이 페이지를 더 예쁘게
                 만들어보세요.
               </li>
+              <li>Forgot password?, Sign Up은 여전히 링크입니다.</li>
             </ul>
             <img class="content__img" src="../assets/day01/ex02.png" />
           </section>
@@ -471,11 +472,12 @@
               <i class="material-icons-outlined">lightbulb</i>"Form is
               temporary, but class is permanent" - Bill Shankly
             </p>
+            <img class="content__img" src="../assets/day01/ex03.png" />
             <p class="content__tip">
               <i class="material-icons-outlined">lightbulb</i>Flexbox를
               사용한다면 창 크기를 줄였을 때 아래와 같이 되겠죠?
             </p>
-            <img class="content__img" src="../assets/day01/ex03.png" />
+            <img class="content__img" src="../assets/day01/ex03_narrow.png" />
           </section>
         </div>
       </main>
