feature/mobile_layout : hamburger cursur pointer

--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -103,7 +103,7 @@
           />
         </a>
         <label for="mobile-nav" class="header__nav--label hidden-desktop">
-          <i class="material-icons md-menu-icon">menu</i>
+          <i class="material-icons menu-icon">menu</i>
         </label>
         <input
           type="checkbox"
