feature/day02 : day00 & day01 section change

--- a/pages/day01.html
+++ b/pages/day01.html
@@ -238,7 +238,11 @@
               class="content__img img-margin"
               src="../assets/day01/majang.jpeg"
             />
-            <hr class="horiz-divider" />
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">Today's Rule</h3>
             <ul class="content__list">
               <li>
