--- a/pages/day00.html
+++ b/pages/day00.html
@@ -236,7 +236,11 @@
                 >여기</a
               >에서 찾곤 합니다.
             </p>
-            <hr class="horiz-divider" />
+          </section>
+
+          <hr class="horiz-divider" />
+
+          <section class="content__section">
             <h3 class="content__subhead xlarge text-bold">Today's Rule</h3>
             <ul class="content__list">
               <li>
